--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,7 +17,7 @@
                 <view:CalendarView />
             </TabItem>
             <TabItem Header="🧮 계산기">
-                <TextBlock Text="계산기 기능 예정" Margin="10"/>
+                <view:CalculatorView />
             </TabItem>
         </TabControl>
     </Grid>
